<resources>
    <string name="app_name">justjava</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">quantity</string>
    <string name="chocklate">Chocklate</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="BUTTONTEXT">-</string>
    <string name="_2">2</string>
    <string name="BUTTONTEXTPLUS">+</string>
    <string name="price">price</string>
    <string name="_0">$0</string>
    <string name="order">ORDER</string>
</resources>